PDIO-45 PDIO-77 #comment Add sbt detection and auto install